--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile('org.springframework.cloud:spring-cloud-starter-config')
     compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')
     compile('org.springframework.cloud:spring-cloud-starter-openfeign')
+    compile('org.springframework.cloud:spring-cloud-starter-sleuth')
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
